# functional_programming

./: README.md
hw1/: README.md
hw1-FadeevSergey/fp-homework/hw1/: hw1.cabal
hw1-FadeevSergey/fp-homework/hw1/src/: Block1And2.hs  Block3.hs
hw1-FadeevSergey/fp-homework/hw1/test/: Block1And2Test.hs  Block3Test.hs  Test.hs
hw1/src/: Block1And2.hs
hw1/test/: Block3Test.hs
hw2/: README.md  hw2.cabal
hw2-FadeevSergey/hw2/src/: Block2.hs
hw2-FadeevSergey/hw2/test/: Test.hs
hw2/src/: Block3.hs
hw2/test/: Block1Test.hs
hw3/: README.md
hw3-FadeevSergey/hw3/: README.md  hw3.cabal
hw3-FadeevSergey/hw3/app/: Main.hs
hw3-FadeevSergey/hw3/src/: Utils.hs
hw3/app/: Main.hs
hw4/: README.md
hw4-FadeevSergey/fp-homework/hw1/src/: Block3.hs
hw4-FadeevSergey/fp-homework/hw1/test/: Block1And2Test.hs  Test.hs
hw4-FadeevSergey/fp-homework/hw2/src/: Block1.hs  Block2.hs
hw4-FadeevSergey/fp-homework/hw2/test/: Block2Test.hs  Block3Test.hs
hw4-FadeevSergey/fp-homework/hw3/src/: Parser.hs
hw4-FadeevSergey/fp-homework/hw4/: hw4.cabal
hw4-FadeevSergey/fp-homework/hw4/src/: Task1.hs
