name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw2-FadeevSergey
license:             MIT
license-file:        LICENSE
author:              Fadeev Sergey
maintainer:          bboottaayy@gmail.com
copyright:           2020 Fadeev Sergey

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1
                      ,Block2
                      ,Block3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                      , mtl
                      -- mtl for import Control.Monad.State
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , tasty-hspec
                     , tasty-quickcheck
                     , hw2
  other-modules:       Block1Test
                     , Block2Test
                     , Block3Test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010